chore: update CI setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,7 @@
 version: '2'
 services:
-  app:
-    build: .
-    image: keboola/docker-demo-sync-app
-    tty: true
-    stdin_open: true
-    command: /bin/bash
-
   dev:
-    image: keboola/docker-demo-sync-app
-    command: /code/tests/run.sh
+    build: .
     volumes:
       - ./:/code
+      - ./data:/data
