--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,12 @@ language: bash
 services:
   - docker
 before_script:
+  - export APP_IMAGE=keboola-component
   - docker -v
-  - docker-compose -v
-  - docker-compose build
-script: docker-compose run --rm app /code/tests/run.sh
-after_success:
-  - docker images
+  - docker build -t $APP_IMAGE .
+  - docker run $APP_IMAGE /code/tests/run.sh
+script: 
+  - skip
 deploy:
   provider: script
   skip_cleanup: true
